# Deep-Frame

./: .gitignore  README.md
core/: CMakeLists.txt
core/capture/: DxgiCapture.cpp  DxgiCapture.h
core/inference/: OnnxInference.cpp  OnnxInference.h
core/napi/: CMakeLists.txt  binding.gyp  build_native.bat  deepframe_native.cpp  index.d.ts  package-lock.json  package.json  test_native.cpp
core/napi/test/: CMakeLists.txt
core/pipeline/: FramePipeline.cpp  FramePipeline.h  RingBuffer.h
core/present/: FramePresenter.cpp  FramePresenter.h
ui/: debug-electron.js  deepframe-ui.js  electron-main.js  main.js  native-bridge.js  package-lock.json  package.json  preload.js  run-deepframe.js  test-native.js  vite.config.ts
ui/dist-electron/: main.js
ui/electron/: main.ts  preload.ts
ui/src/: main.tsx
ui/src/components/: ConfigPanel.tsx  ScaleButton.tsx  StatusCard.tsx  TitleBar.tsx  ToggleSwitch.tsx
ui/src/hooks/: useDeepFrame.ts
ui/src/pages/: Dashboard.tsx
ui/src/styles/: animations.css  components.css  global.css  tokens.css
